# iglunix

./: .editorconfig  .gitignore  INSTALL.md  LOGO  README.md  build_utils  createimg.sh  example.build.sh  geninitrd.sh  iglu.sh  iglupkg.sh  lazy.sh  lazypkg.sh  logo  repover.sh
.github/workflows/: check_builds.yml  ood.yml
bad/: README.md
bad/autoconf/: autoconf.sh.patch  autoheader.sh.patch  build.sh  makefile-m4f.patch
bad/bad/: build.sh
bad/gm4/: build.sh
bad/gmake/: build.sh
base/: README.md
base/bmake/: build.sh  no-test.patch
base/byacc/: build.sh
base/ca-certificates/: build.sh
base/cmake/: build.sh
base/compiler-rt/: build.sh
base/curl/: build.sh  f
base/dhcpcd/: build.sh
base/doas/: build.ninja  build.sh
base/expat/: build.sh
base/fakeroot/: build.sh
base/flex/: build.sh
base/gettext-tiny/: build.sh
base/git/: build.sh
base/hwdata/: build.sh
base/iglunix/: build.sh  motd
base/iglupkg/: build.sh
base/init/: build.sh
base/installer/: build.sh
base/iwd/: build.sh
base/kakoune/: build.sh
base/kati/: build.sh
base/lc-make/: build.sh
base/libarchive/: build.sh
base/libcxx/: build.sh
base/libedit/: build.sh
base/libelf/: build.sh
base/libffi/: build.sh  undef.patch
base/libnl-tiny/: build.sh
base/libunwind/: build.sh
base/llvm/: build.sh  riscv-relax.patch
base/llvm-libgcc/: build.sh
base/man-pages-posix/: build.sh
base/mandoc/: build.sh  configure.local  man.sh  term-size.patch
base/meson/: build.sh
base/mksh/: build.sh  procsub.patch
base/muon/: build.sh
base/netbsd-curses/: build.sh  cross.patch
base/om4/: build.sh  configure.patch  m4-hand-written-lexer.patch
base/openssh/: build.sh
base/openssl/: build.sh  update-ca.sh
base/oslo/: build.sh
base/pci-ids/: build.sh
base/perl/: build.sh
base/pkgconf/: build.sh
base/python/: build.sh
base/python-mako/: build.sh
base/python-markupsafe/: build.sh
base/rust/: build.sh
base/samurai/: build.sh
base/toybox/: build.sh  lspci-fix-ids.patch  mksh-make.patch  mksh.patch  mksh2  mksh2.patch  xxd-i.patch  xxd.c
base/wpa_supplicant/: build.sh
base/xbps/: build.sh  cert-file.patch
base/zlib-ng/: build.sh
base/zstd/: build.sh
base/🦆/: build.sh
bootstrap/: README.md
bootstrap/go/: build.sh
bootstrap/java/: build.sh
bootstrap/rust/: boot.sh  build.sh
docs/: index.md
extra/alsa-lib/: build.sh
extra/autossh/: build.sh
extra/bat/: build.sh
extra/bin86/: build.sh
extra/bzip2/: build.sh
extra/cbindgen/: build.sh
extra/ccache/: build.sh
extra/distcc/: build.sh
extra/dropbear/: build.sh
extra/editorconfig-core-c/: build.sh
extra/expat/: build.sh
extra/extra-cmake-modules/: build.sh
extra/fish/: build.sh  git_version_gen.patch
extra/glow/: build.sh
extra/go/: build.sh
extra/gyp/: build.sh
extra/heirloom-doctools/: build.sh
extra/json-c/: build.sh
extra/kak-lsp/: build.sh
extra/kati/: build.sh
extra/lc-make/: build.sh
extra/libarchive/: build.sh
extra/libevent/: build.sh
extra/libexecinfo/: build.sh
extra/libfuse/: build.sh
extra/libinih/: build.sh
extra/libxml2/: build.sh
extra/lua/: LICENSE  build.sh
extra/lynx/: build.sh
extra/meson/: build.sh  not-darwin.patch
extra/mold/: build.sh
extra/ncspot/: build.sh
extra/nodejs/: build.sh
extra/nss/: build.sh  nss-config.in  nss-util.pc.in  nss.pc.in
extra/openpam/: build.sh
extra/openssh/: build.sh
extra/pcre/: build.sh
extra/pcre2/: build.sh
extra/pfetch/: build.sh
extra/python-build/: build.sh
extra/python-mako/: build.sh
extra/python-markupsafe/: build.sh
extra/python-pygments/: build.sh
extra/python-setuptools/: .init.ee  build.sh
extra/rust/: alpine-crt.patch  build.sh  libexec.patch  libressl.patch  no_git_repo.patch  offset.patch
extra/rust-analyzer/: build.sh
extra/rust-bindgen/: build.sh
extra/sqlite/: build.sh
extra/xxhash/: build.sh
extra/yasm/: build.sh
extra/zig/: build.sh
extra/zip/: build.sh
extra/zsh/: build.sh  zprofile.zsh
extra/zsh-autosuggestions/: build.sh
extra/zsh-syntax-highlighting/: build.sh
fonts/hack/: build.sh
fonts/iosevka/: build.sh
fonts/noto/: build.sh
gnome/atk/: build.sh
gnome/dbus/: build.sh
gnome/dbus-glib/: build.sh
gnome/gdk-pixbuf/: build.sh
gnome/glib/: .2.68.4.tar.zst  build.sh  error_disable
gnome/gtk+/: build.sh
gnome/json-glib/: build.sh
gnome/pango/: build.sh
gui/: README.md
gui/alsa-sndio/: build.sh
gui/anthy/: build.sh
gui/autotiling-rs/: build.sh
gui/basu/: 0001-remove-gperf.patch  build.sh  bus-error.patch
gui/basu/in/scripts/: README.md  meson.build  meson_options.txt
gui/cairo/: build.sh
gui/ffmpeg/: build.sh
gui/firefox/: build.sh  grefptr.patch  sandbox-allow-select.patch
gui/firefox-hg/: build.sh  libcxx.patch  sandbox-allow-select.patch
gui/fontconfig/: build.sh
gui/foot/: build.sh  netbsd-tic.patch
gui/freetype/: build.sh
gui/freetype-harbuzz/: build.sh
gui/freetype-harfbuzz/: build.sh  ft_meson.patch  meson.build
gui/glfw/: build.sh
gui/glm/: build.sh
gui/glslang/: build.sh
gui/grim/: build.sh
gui/harfbuzz/: build.sh
gui/hwdata/: build.sh  install_T_fix
gui/i3status-rs/: build.sh
gui/icu/: build.sh
gui/kanshi/: build.sh
gui/libass/: build.sh
gui/libdisplay-info/: build.sh
gui/libdrm/: 0001-intel-don-t-auto-disable-on-non-x86-platforms.patch  0002-intel-HACK-remove-pciaccess-dep.patch  build.sh
gui/libepoxy/: build.sh
gui/libevdev/: build.sh
init/: inittab
init/init.d/: dev  (+5 more)
linux/: README.md
linux/musl/: bits.meson.build  build.sh  crt.meson.build  glob.sh  globbits.sh  meson.build  version_h.sh
man/: iglu.8
old/: README.md
scripts/: build_utils  buildbase.sh  check_builds.sh  check_builds_chroot.sh  createimg.sh  fetch_autobuild.sh  geninitrd.sh  gentar.sh  iglu.sh  iglupkg  iglupkg.sh  install-pc.sh  install-pi.sh  install.sh  mkdeps.sh  ood.sh  repover.sh  setup_sysroot.sh  updatever.sh  xbps-for-ci.sh
templates/: cmake.build.sh  go.build.sh  meson.build.sh  meta.build.sh  python.build.sh  rust.build.sh  simple.build.sh
(+279 files in other folders)
