# -*- mode: meson -*-
# SPDX-License-Identifier: LGPL-2.1+

option('debug-extra', type : 'array', choices : ['hashmap'], value : [],
       description : 'enable extra debugging')

option('nobody-user', type : 'string',
       description : 'The name of the nobody user (the one with UID 65534)',
       value : 'nobody')

option('system-bus-address', type : 'string',
       description : 'The address of the sytem bus (defined at dbus compilation)',
       value : 'unix:path=/var/run/dbus/system_bus_socket')

option('audit', type : 'feature',
       description : 'libaudit support')

option('libcap', type : 'feature',
       description : 'libcap support')
